--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>HACK</title>
+    <title>WECARE</title>
     <link type="text/css" rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <link rel="shortcut icon" href="./icon1.png">
     <!--Css Doodle-->
     <script src="https://unpkg.com/css-doodle@0.8.5/css-doodle.min.js"></script>
     <!-- Bootstrap CSS -->
@@ -30,17 +31,8 @@
             <div class="navbar-nav">
               <a class="nav-item nav-link" href="index.html" >Home</a>
               <a class="nav-item nav-link" href="#about">About</a>
-              <div class="dropdown ">
-                <a class="dropbtn nav-item nav-link" style="color: black;font-weight: 600;">Dropdown 
-                  <i class="fa fa-caret-down"></i>
-                </a>
-                <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
-                </div>
-              </div>
-              <a class="nav-item nav-link" href="services.html" >Services</a>
+              
+              <a class="nav-item nav-link" href="#services" >Services</a>
               <a class="nav-item nav-link" href="#contact">Contact </a>
               <a class="nav-item nav-link" href="login.html" >Login </a>
             </div>
@@ -108,7 +100,7 @@
 
         </div>
       </div>
-      <div class="aboutus">
+      <div class="aboutus" id="services">
         <div class="container py-lg-5">
             <h2 style="text-align: center;color: #41B7B7;font-weight: 600;margin-bottom: 1em;">What we provide<b></b></h2>
             <div class="aboutinfo" data-aos="fade-up" data-offset="1000">
