--- a/presscan.html
+++ b/presscan.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <link type="text/css" rel="stylesheet" href="style.css">
-    <title>Imgur-Upload</title>
+    <title>WECARE-SCAN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./css/style.css" rel="stylesheet" media="screen">
     <link href="./css/mobile-style.css" rel="stylesheet" media="screen">
-    <link rel="shortcut icon" href="./favicon.png">
+    <link rel="shortcut icon" href="./icon1.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
@@ -32,17 +32,8 @@ background-size: cover;height: 100vh;overflow: hidden;">
             <div class="navbar-nav">
               <a class="nav-item nav-link" href="index.html" >Home</a>
               <a class="nav-item nav-link" href="about.html">About</a>
-              <div class="dropdown ">
-                <a class="dropbtn nav-item nav-link" style="color: black;font-weight: 600;">Dropdown 
-                  <i class="fa fa-caret-down"></i>
-                </a>
-                <div class="dropdown-content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
-                </div>
-              </div>
-              <a class="nav-item nav-link" href="services.html" >Services</a>
+            
+              <a class="nav-item nav-link" href="index.html#services" >Services</a>
               <a class="nav-item nav-link" href="#contact">Contact </a>
               <a class="nav-item nav-link" href="login.html" >Login </a>
             </div>
