updated pres scan

--- a/presscan.html
+++ b/presscan.html
@@ -51,6 +51,8 @@ background-size: cover;height: 100vh;overflow: hidden;">
             <div class="dropzone">
                 <div class="info"></div>
             </div>
+            <div id="scanned">
+            </div>
         </div>
     </div>
   
