--- a/dashboard.html
+++ b/dashboard.html
@@ -15,10 +15,10 @@
      <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
    
 </head>
-<body onload="dashboard()">
+<body onload="dashboard()" style="overflow: hidden;">
     <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top " >
         <div class="container-fluid">
-          <h3><b>Hack</b></h3>
+          <img src="./icon.png" height="60px" width="170px" id="mainlogo">
           <button  class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -41,16 +41,16 @@
       </nav>
        <div class="topper">
         <div class="main">
-            <div class="col-5 card check" data-aos="fade-left" style="text-align:center;background-color: rgb(43, 41,41); border-radius: 8px;">
-              <div style="width:200px;margin-top: 100px;" id="img">
+            <div class="col-4 card check" data-aos="fade-left" style="text-align:center;background-color: rgb(43, 41,41); border-radius: 8px;">
+              <div style="width:200px;margin-top: 50px;" id="img">
                 <img src="./user.svg" style="width:200px;height:200px;display:block;">
               </div>
                <h1 id="name" style="color:white;"></h1>
                <h2 id="desig" style="color:white;">Patient</h2>
                <h4 id="email" style="color:white;"></h4>
             </div>
-            <div class="col-5 card check" data-aos="fade-right" style=" background-color: rgb(43, 41,41);border-radius: 8px;">
-              <h1 style="margin-bottom: 50px;margin-top: 100px;color:white;">Common Diseases</h1>
+            <div class="col-4 card check" data-aos="fade-right" style=" background-color: rgb(43, 41,41);border-radius: 8px;">
+              <h1 style="margin-bottom: 50px;margin-top: 50px;color:white;">Common Diseases</h1>
               <canvas id="myChart" style="margin-bottom: 100px"></canvas>
             </div>
         </div>
