--- a/dandds.html
+++ b/dandds.html
@@ -31,7 +31,7 @@
            
             <div class="navbar-nav">
               <a class="nav-item nav-link" href="dashboard.html" >Dashboard</a>
-              <a class="nav-item nav-link" href="#">ChatBot</a>
+              <a class="nav-item nav-link" href="bot.html">ChatBot</a>
               <a class="nav-item nav-link" href="presscan.html">Prescription Scan</a>
               <a class="nav-item nav-link" href="dandds.html">Do's and Don't s</a>
               <a class="nav-item nav-link" href="#">Logout</a>
