--- a/presscan.html
+++ b/presscan.html
@@ -17,7 +17,7 @@
 height: 100vh;
 background-repeat: no-repeat;
 background-size: cover;height: 100vh;">
-     <div id="preloader"></div>
+    
     <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top " >
         <div class="container-fluid">
           <img src="./icon.png" height="60px" width="120px" id="mainlogo">
@@ -31,7 +31,7 @@ background-size: cover;height: 100vh;">
            
             <div class="navbar-nav">
               <a class="nav-item nav-link" href="dashboard.html" >Dashboard</a>
-              <a class="nav-item nav-link" href="#">ChatBot</a>
+              <a class="nav-item nav-link" href="bot.html">ChatBot</a>
               <a class="nav-item nav-link" href="presscan.html">Prescription Scan</a>
               <a class="nav-item nav-link" href="dandds.html">Do's and Don't s</a>
               <a class="nav-item nav-link" href="#">Logout</a>
