--- a/presscan.html
+++ b/presscan.html
@@ -14,9 +14,9 @@
 </head>
 
 <body style="background-image: url(./pres.png);
-height: 100vh;
+height: 100%;
 background-repeat: no-repeat;
-background-size: cover;height: 100vh;">
+background-size: cover;min-height: 100vh;">
     
     <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top " >
         <div class="container-fluid">
