--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
            
             <div class="navbar-nav">
               <a class="nav-item nav-link" href="index.html">Home</a>
-              <a class="nav-item nav-link"  href="about.html" >About</a>
+              <a class="nav-item nav-link"  href="index.html#about" >About</a>
         
               <a class="nav-item nav-link" href="index.html#services">Services</a>
               <a class="nav-item nav-link" >Contact </a>
