--- a/presscan.html
+++ b/presscan.html
@@ -34,7 +34,7 @@ background-size: cover;min-height: 100vh;">
               <a class="nav-item nav-link" href="bot.html">ChatBot</a>
               <a class="nav-item nav-link" href="presscan.html">Prescription Scan</a>
               <a class="nav-item nav-link" href="dandds.html">Do's and Don't s</a>
-              <a class="nav-item nav-link" href="#">Logout</a>
+              <a class="nav-item nav-link" style="cursor: pointer;" onclick="logout()">Logout</a>
             </div>
             
           </div>
