--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,7 @@
               <a class="nav-item nav-link" href="bot.html">ChatBot</a>
               <a class="nav-item nav-link" href="presscan.html">Prescription Scan</a>
               <a class="nav-item nav-link" href="dandds.html">Do's and Don't s</a>
-              <a class="nav-item nav-link" href="#">Logout</a>
+              <a class="nav-item nav-link" style="cursor: pointer;" onclick="logout()">Logout</a>
             </div>
             
           </div>
