--- a/presscan.html
+++ b/presscan.html
@@ -58,6 +58,7 @@ background-size: cover;min-height: 100vh;">
     <script>
       AOS.init();
     </script>
+    <script src="./js/index.js"></script>
     <script>
         $(document).ready(function () {
   $(window).on('scroll', function () {
