--- a/bot.html
+++ b/bot.html
@@ -89,7 +89,7 @@
 </div> -->
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.concat.min.js'></script>
-  <script  src="js/index1.js"></script>
+  <script  src="./js/index1.js"></script>
   <!-- <script type="text/javascript">
     $(window).on('load',function(){
         $('#myModal').modal('show');
