--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
                 <div class="col-lg-4 border-left border-right">
                     <div class="p-md-5 p-sm-3 box servicecard">
                         <img src="./maps.png" width=100 height=100 >
-                        <p>normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now </p>
+                        <p>Not sure about the hospitals nearby? Not to worry! We will help you show all the hospitals that are near your locality using the google maps</p>
                     </div>
                 </div>
                 <div class="col-lg-4">
                     <div class="p-md-5 p-sm-3 box servicecard">
                         <img src="./search.png" width=100 height=100 >
-                        <p>normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now </p>
+                        <p>Have a question but no one to answer? Chill. We have our own forum where you can post your question and get it answered by all your users immediately</p>
     
                     </div>
                 </div>
@@ -139,7 +139,7 @@
                 <div class="col-lg-4">
                     <div class="p-md-5 p-sm-3 box servicecard">
                         <img src="./hospital.png" width=100 height=100 >
-                        <p>normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now </p>
+                        <p>Hospital is a good place for patients because there we have people who can guide us about our health right? But what about people at home? We have a section that tells us the Do's and Dont's about the health issues you addressed to us! Just try it out</p>
     
                     </div>
                 </div>
