--- a/bot.html
+++ b/bot.html
@@ -51,7 +51,7 @@
     <h1>MEDI BOT</h1>
     <h2>I am customer support chat bot</h2>
     <figure class="avatar">
-      <img src="css/bot.png"/></figure>
+      <img src="./css/bot.png"/></figure>
   </div>
   <div class="messages">
     <div class="messages-content"></div>
@@ -87,7 +87,7 @@
     
   </div>
 </div> -->
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.3/jquery.mCustomScrollbar.concat.min.js'></script>
   <script  src="./js/index1.js"></script>
   <!-- <script type="text/javascript">
