--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
                 <div class="form">
                         <div class="form-group mb-2" >
                          
-                          <input name="username" type="text" class="form-control email" id="exampleInputEmail1" required aria-describedby="emailHelp" placeholder="Username">
+                          <input name="username" type="text" class="form-control email" id="exampleInputEmail1" required aria-describedby="emailHelp" placeholder="Email">
                           
                         </div>
                         <div class="form-group">
